# GNUDO-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  gnudo-backend.pro  gnudo.hpp  managers.hpp  objects.hpp
doc/: AUTHORS.md  CHANGELOG.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  gnudo.cpp  gnudo.hpp  managers.cpp  managers.hpp  objects.cpp  objects.hpp  src.pro
src/driver/abstract/: CMakeLists.txt
src/driver/abstract/src/: managers.cpp  managers.hpp
src/gnudo-backend/: dbdefs.hpp  gnudo.cpp  gnudo.hpp  managers.cpp  managers.hpp  objects.cpp  objects.hpp
src/gnudo-backend/test/: test.cpp  test.pro
src/test/: test.cpp  test.pro
